--- a/my-app-v2/src/App.css
+++ b/my-app-v2/src/App.css
@@ -4,8 +4,7 @@
   box-sizing: border-box;
   min-height: 100vh;
   background: url(./components/assets/img/bg.png);
-  background-size: cover;
   background-repeat: no-repeat;
-  background-position: start center;
+  background-size: contain;
   width: 100vw;
 }
