--- a/my-app-v2/src/components/assets/css/LoginForm.css
+++ b/my-app-v2/src/components/assets/css/LoginForm.css
@@ -19,7 +19,6 @@
     box-shadow: none !important;
     border-bottom: 2px solid #daa520 !important;
     transition: .3s;
-
 }
 
 .login-btn {
@@ -28,8 +27,31 @@
     border-radius: 0 !important;
     border: 1px solid #000;
     color: #000 !important;
-    transition: .5s
-    ;
+    transition: .5s;
+}
+
+.trigger {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    /* border: 1px solid #ff0000; */
+}
+
+.trigger .toggle-check {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    opacity: 0;
+    cursor: pointer;
+    background: #fff !important;
+}
+
+.trigger .toggle-icon {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    /* left: 30px; */
+    pointer-events: none;
 }
 
 .login-btn:hover {
