--- a/my-app-v2/src/components/assets/css/footer.css
+++ b/my-app-v2/src/components/assets/css/footer.css
@@ -5,6 +5,7 @@
 }
 
 .footer-container {
+    border-top: 1px solid #f0f0f0;
     width: 100%;
     background: #fff;
     margin-left: 0 !important;
