--- a/my-app-v2/src/components/assets/css/footer.css
+++ b/my-app-v2/src/components/assets/css/footer.css
@@ -10,3 +10,11 @@
     background: #fff;
     margin-left: 0 !important;
 }
+
+@media (max-width: 576px) {
+    .footer-container h6 {
+        font-size: 1rem;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
