--- a/my-app-v2/src/components/assets/css/register.css
+++ b/my-app-v2/src/components/assets/css/register.css
@@ -42,3 +42,14 @@
 }
 
 
+@media (min-width: 768px) {
+    .register-form-container {
+        max-width: 800px;
+        width: 70%;
+    }
+
+    .mt-10 {
+        margin-top: 5rem;
+    }
+}
+
